--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,10 @@ body {
     padding:3% 15%;
 }
 
+.container-padded {
+    padding:7% 15%;
+}
+
 /* Navigation Bar */
 .navbar {
     padding: 0 0 4.5rem;
@@ -58,8 +62,10 @@ body {
 
 /* Title image */
 .title-image {
-    width:60%;
+    width:50%;
     transform: rotate(25deg);
+    position: absolute;
+    right: 30%;
 }
 
 /* Testimonials */
@@ -70,7 +76,7 @@ body {
 }
 
 .testimonial-image {
-    width: 20%;
+    width: 25%;
     border-radius: 100%;
     margin: 20px;
 }
@@ -83,6 +89,10 @@ body {
 .press-logo {
     width: 10%;
     margin: 20px 20px 50px;
+}
+
+#pricing {
+    padding: 100px;   
 }
 
 /* unique selling points */
@@ -105,4 +115,23 @@ body {
 
 #features {
     margin: 50px 0 0 0;
+}
+
+#footer { 
+    font-size: 0.7rem;
+}
+
+.social {
+    padding: 6px 6px 24px 6px;
+}
+
+@media (max-width: 1028px) {
+    .title-image {
+        position: static;
+        transform: rotate(0);
+    }
+
+    #title {
+        text-align: center;
+    }
 }
